--- a/WEB_TiengAnh/views/admin/pages/dashboard.pug
+++ b/WEB_TiengAnh/views/admin/pages/dashboard.pug
@@ -32,6 +32,10 @@ html(lang="en")
                   i.fas.fa-question-circle.me-2
                   | Tạo câu hỏi
               li.nav-item
+                a.nav-link(href='/admin/listening/create')
+                  i.fas.fa-question-circle.me-2
+                  | Tạo câu hỏi Listening
+              li.nav-item
                 a.nav-link(href='/admin/exams')
                   i.fas.fa-book.me-2
                   | Quản lý đề thi
