--- a/WEB_TiengAnh/views/client/layouts/default.pug
+++ b/WEB_TiengAnh/views/client/layouts/default.pug
@@ -6,6 +6,8 @@ html
         meta(http-equiv="Expires" content="0")   
         title Trang IELTS
         link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css")
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+
         link(rel="stylesheet" href="/client/css/style_client_default.css")
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer)
     body
