update lai giao dien, news

--- a/WEB_TiengAnh/views/client/partials/header.pug
+++ b/WEB_TiengAnh/views/client/partials/header.pug
@@ -13,7 +13,7 @@ body
           img(src="/images/logo/67133d06115ea.png" alt="Logo" style="height: 40px;")
       // Menu
       nav.nav-menu.mx-auto
-        a.nav-link(href="/client/pages/dashboard.pug") Tin tức tiếng Anh
+        a.nav-link(href="/news") Tin tức tiếng Anh
         a.nav-link(href="/toeic-dashboard.pug") TOEIC ONLINE TEST
         a.nav-link(href="#") Chép chính tả
         a.nav-link(href="#") Bài mẫu TOEIC
