--- a/WEB_TiengAnh/views/admin/layouts/default.pug
+++ b/WEB_TiengAnh/views/admin/layouts/default.pug
@@ -26,5 +26,8 @@ html(lang='en')
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js')
     script(src='https://cdn.jsdelivr.net/npm/sweetalert2@11')
-    block scripts
-cdn.jsdelivr.net
+
+//-     block scripts
+//- cdn.jsdelivr.net
+
+//-     block scripts
